--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* font families */ 
+@import url('https://fonts.googleapis.com/css2?family=Catamaran&family=Fascinate+Inline&display=swap');
+
+
+.font-catamaran {
+    font-family:  'Catamaran', sans-serif;
+}
+.font-fascinate {
+   font-family:  'Fascinate Inline', cursive;
+}
+
+
+body { 
+    font-family: 'Catamaran', sans-serif;;
+}
